--- a/inventory.ini
+++ b/inventory.ini
@@ -14,7 +14,7 @@ standby.project.fr ansible_host=192.168.100.6 ansible_user=user1 ansible_passwor
 
 
 [_cluster:children]
-edge
+client
 nodes
 standby
 
